--- a/package.json
+++ b/package.json
@@ -20,17 +20,25 @@
     "test:e2e": "jest --config ./test/jest-e2e.json"
   },
   "dependencies": {
+    "@ai-sdk/google": "^2.0.44",
+    "@ai-sdk/google-vertex": "^3.0.85",
+    "@google-cloud/speech": "^7.2.1",
     "@nestjs/common": "^10.0.0",
     "@nestjs/config": "^4.0.2",
     "@nestjs/core": "^10.0.0",
     "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-socket.io": "^10.0.0",
+    "@nestjs/websockets": "^10.0.0",
+    "ai": "^5.0.107",
     "axios": "^1.13.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.2",
     "firebase-admin": "^13.6.0",
     "mo": "^1.7.3",
-    "reflect-metadata": "^0.2.0",
-    "rxjs": "^7.8.1"
+    "reflect-metadata": "^0.1.14",
+    "rxjs": "^7.8.1",
+    "socket.io": "^4.8.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@nestjs/cli": "^10.0.0",
@@ -38,6 +46,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
+    "@types/multer": "^2.0.0",
     "@types/node": "^20.3.1",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
